--- a/templates/general/varios/importar_cpbs.html
+++ b/templates/general/varios/importar_cpbs.html
@@ -30,19 +30,19 @@
     				<div class="col-sm-3">
     					{{ form.empresa|as_crispy_field }}
     				</div>			
-    				<div class="col-sm-7 ">
+    				<div class="col-sm-5 ">
     					{{ form.archivo|as_crispy_field }}					
     				</div>
-                    <div class="col-sm-2"><button class="btn btn-sm pull-right blue-steel" id="Procesar" type="button"><i class="fa fa-check"></i> Procesar</button></div>
+                    <div class="col-sm-2">
+                        {{ form.migra|as_crispy_field }}
+                    </div>          
+                    <div class="col-sm-2"><button class="btn btn-sm pull-right blue-steel" id="Procesar"  value="procesar" type="button"><i class="fa fa-check"></i> Procesar</button></div>
     			</div>
     		</fieldset>
     	 </div>
      <br>
 	{% if resultado %} 
-	  <div class="col-sm-12 ">
-		<div class="btn-group btnAccion" style="float:left;margin-right:10px;margin-bottom:10px;">         
-            <a class="btn btn-sm blue-steel"  style="margin-right:10px;" href='#'>Generar Faltantes</a>                    
-        </div>   
+	  <div class="col-sm-12 ">		
         <table width="100%" id="dataTables-primary" class="table table-striped table-hover table-condensed table-no-bordered tabla_nueva">         
             <thead>
                 <tr>
@@ -54,6 +54,11 @@
                     <th class="text-center" width="15%">TDoc</th> 
                     <th class="text-center" width="15%">NºDoc</th>
                     <th class="text-center" width="15%">Receptor</th>
+                    <th class="imprimir">Neto Gravado</th>
+                    <th class="imprimir">Neto NoGravado</th>
+                    <th class="imprimir">Exento</th>
+                    <th class="imprimir">IVA</th>
+                    <th class="imprimir">Total</th>
                 </tr>
             </thead>
             <tbody>
@@ -68,6 +73,11 @@
                     <td class="text-center">{{ r.tdoc|default_if_none:'' }}</td>                                
                     <td class="text-center">{{ r.nrodoc|default_if_none:'' }}</td>                                
                     <td class="text-center">{{ r.receptor|default_if_none:'' }}</td>                                
+                    <td class="text-center">${{ r.imp_neto_g|default_if_none:'' }}</td>                                
+                    <td class="text-center">${{ r.imp_neto_nograv|default_if_none:'' }}</td>                                
+                    <td class="text-center">${{ r.imp_exento|default_if_none:'' }}</td>                                
+                    <td class="text-center">${{ r.imp_iva|default_if_none:'' }}</td>                                
+                    <td class="text-center">${{ r.imp_total|default_if_none:'' }}</td>                                
                 </tr>
                 {% endfor %}
             </tbody>
@@ -76,6 +86,11 @@
                     <th></th> 
                     <th></th>                                
                     <th></th>        
+                    <th></th> 
+                    <th></th>                                
+                    <th></th> 
+                    <th></th>                                
+                    <th></th>
                     <th></th> 
                     <th></th>                                
                     <th></th> 
