--- a/templates/general/empresas/empresa_form.html
+++ b/templates/general/empresas/empresa_form.html
@@ -50,9 +50,10 @@
 													       	<div class="col-sm-3">{% bootstrap_field form.provincia %}</div>
 													     </div>
 													     <div class="row cerca">
-													       	<div class="col-sm-4">{% bootstrap_field form.email %}</div>
-													       	<div class="col-sm-4">{% bootstrap_field form.telefono %}</div>		
-													       	<div class="col-sm-4">{% bootstrap_field form.celular %}</div>	
+													       	<div class="col-sm-3">{% bootstrap_field form.email %}</div>
+													       	<div class="col-sm-3">{% bootstrap_field form.telefono %}</div>		
+													       	<div class="col-sm-3">{% bootstrap_field form.celular %}</div>	
+													       	<div class="col-sm-3">{% bootstrap_field form.cbu %}</div>	
 													     </div>
 										               </div>                                       						         
 										       		</fieldset>										       	
