--- a/templates/reportes/contables/libro_iva_ventas.html
+++ b/templates/reportes/contables/libro_iva_ventas.html
@@ -32,7 +32,9 @@
                     {% if cpbs %}  
                         <div class="btn-group " style="float:left;margin-right:10px;"> 
                              <button name="cpbs" type="submit" target="_blank" class="btn btn-xs blue-hoki" style="float:left;margin-right:10px;"><i class="fa fa-save fa-fw"></i>  CITI CPBs </button>    
-                             <button name="alicuotas" type="submit" target="_blank" class="btn btn-xs blue-hoki"><i class="fa fa-save fa-fw"></i> CITI Alícuotas </button>    
+                             <button name="alicuotas" type="submit" target="_blank" class="btn btn-xs blue-hoki" style="float:left;margin-right:10px;"><i class="fa fa-save fa-fw"></i> CITI Alícuotas </button>    
+                             <button name="cpbs_iva_dig" type="submit" target="_blank" class="btn btn-xs blue-steel" style="float:left;margin-right:10px;"><i class="fa fa-save fa-fw"></i>  IVA Digital CPBs </button>    
+                             <button name="alic_iva_dig" type="submit" target="_blank" class="btn btn-xs blue-steel"><i class="fa fa-save fa-fw"></i> IVA Digital Alícuotas </button>    
                         </div>  
                     {% endif %}
                            </form>                                                   
