--- a/staticfiles/css/login.css
+++ b/staticfiles/css/login.css
@@ -85,5 +85,5 @@ body{
     background: #555555;
     border-radius: 0px;
     cursor: pointer;
-    border: 1px solid #cfcfd0;
+    border: 1px solid #bdbdbd;
 }
