--- a/templates/general/movimientos/movimientos_listado.html
+++ b/templates/general/movimientos/movimientos_listado.html
@@ -43,7 +43,7 @@
                     <div class="btn-group" style="float:left;margin-right:20px;margin-bottom:10px;"> 
                     <a class="btn btn-sm red-sunglo" style="float:left;margin-right:20px;" href="{% url 'movimientos_nuevo' %}">Nuevo Movimiento</a>
                     </div>
-                    <table id="dataTables-cpb_movimientos" class="table table-striped compact table-hover table-no-bordered tabla_nueva nowrap">         
+                    <table id="dataTables-cpb_movimientos" style="display:none;" class="table table-striped compact table-hover table-no-bordered tabla_nueva nowrap">         
                         <thead>
                             <tr>
                                 <th class="no-sort text-center"></th>
