--- a/templates/productos/lista_productos.html
+++ b/templates/productos/lista_productos.html
@@ -28,7 +28,7 @@
     <a class="btn btn-sm blue-hoki" style="float:left;margin-right:20px;" href="{% url 'producto_nuevo' %}">Nuevo
         Producto</a>
     {% endif %}
-    <table width="100%" id="dataTables-primary"
+    <table width="100%" id="dataTables-primary" style="display:none;" 
         class="table table-striped compact table-hover table-no-bordered tabla_nueva nowrap">
         <thead>
             <tr>
