--- a/templates/productos/producto_stock.html
+++ b/templates/productos/producto_stock.html
@@ -150,8 +150,8 @@ var tabla = $('#dataTables-stock').DataTable({
                   "targets"  : 'no-sort',
                   "orderable": false,
                 }],          
-           "paging":   false,
-           "lengthMenu": [[50, -1], [50, "Todos"]],
+           "paging":   true,
+           "lengthMenu": [[20, 50, -1], [20, 50, "Todos"]],
            "autoWidth": false,           
            "order": [],
            "colReorder": true,
