--- a/templates/reportes/cta_cte/saldos_clientes.html
+++ b/templates/reportes/cta_cte/saldos_clientes.html
@@ -5,7 +5,10 @@
 {% load humanize %}
 {% block main %} 
     
-      
+        <div id="cargando" class="cargando" >
+            <span class="cargando-txt">CARGANDO...</span>
+            <img class="cargando-img" src="{% static 'img/loading-bars.svg' %}">
+        </div>
         <div class="col-md-12 cerca">   
             <div class="portlet box toolbar_blue">
                 <div class="portlet-title">
@@ -24,7 +27,7 @@
             </div>
 
        
-            <table id="dataTables-cpb_venta" class="table dataTable  table-striped table-hover table-no-bordered tabla_cpbs tabla_nueva nowrap">         
+            <table id="dataTables-cpb_venta" style="display:none;" class="table dataTable  table-striped table-hover table-no-bordered tabla_cpbs tabla_nueva nowrap">         
                 <thead>
                     <tr>
                         <th class="text-center"></th>
@@ -190,7 +193,17 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                     className: 'btnToolbar',                    
                 },
             ],
-            "footerCallback": function ( row, data, start, end, display ) {
+            PreDrawCallback:function(){
+            $("#cargando").show();
+            },
+            initComplete: function () {
+               
+                $("#dataTables-cpb_venta").show();
+                  this.fnAdjustColumnSizing();
+                $("#cargando").hide();
+
+            },
+            footerCallback: function ( row, data, start, end, display ) {
             var api = this.api(), data;
             var floatVal = function (i) {
                 if (typeof i === "number") {
