--- a/templates/reportes/varios/vencimientos_cpbs.html
+++ b/templates/reportes/varios/vencimientos_cpbs.html
@@ -43,7 +43,7 @@
                     <div class="btn-group " style="float:left;margin-right:10px;margin-bottom:10px;">                  
                     <button class="btn btn-sm blue-hoki" value="" id="btnImprimirDetalles">Imprimir Detalles</button>
                     </div>   
-                    <table id="dataTables-cpb_venta" class="table table-striped compact table-hover table-no-bordered tabla_nueva nowrap">         
+                    <table id="dataTables-cpb_venta" style="display:none;" class="table table-striped compact table-hover table-no-bordered tabla_nueva nowrap">         
                         <thead>
                             <tr>                               
                                 <th class="no-sort text-center" data-priority="2"></th>
