--- a/templates/reportes/cta_cte/cta_cte_clientes.html
+++ b/templates/reportes/cta_cte/cta_cte_clientes.html
@@ -7,7 +7,10 @@
 
 {% block main %} 
     
-
+        <div id="cargando" class="cargando" >
+            <span class="cargando-txt">CARGANDO...</span>
+            <img class="cargando-img" src="{% static 'img/loading-bars.svg' %}">
+        </div>
           <div class="col-md-12 cerca">   
             <div class="portlet box toolbar_blue">
                 <div class="portlet-title">
@@ -39,7 +42,7 @@
                     </button>
                         
                     </form>
-                    <table id="dataTables-cpb_venta" class="table table-striped compact table-hover table-no-bordered tabla_nueva ">         
+                    <table id="dataTables-cpb_venta" style="display:none;" class="table table-striped compact table-hover table-no-bordered tabla_nueva ">         
                         <thead>
                             <tr>                               
                                 <th class="text-center">Fecha</th>                                
@@ -243,7 +246,17 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
 
                 },
             ],
-            "footerCallback": function ( row, data, start, end, display ) {
+            PreDrawCallback:function(){
+            $("#cargando").show();
+            },
+            initComplete: function () {
+               
+                $("#dataTables-cpb_venta").show();
+                  this.fnAdjustColumnSizing();
+                $("#cargando").hide();
+
+            },
+            footerCallback: function ( row, data, start, end, display ) {
             var api = this.api(), data;
             var floatVal = function (i) {
                 if (typeof i === "number") {
