--- a/staticfiles/css/layout.css
+++ b/staticfiles/css/layout.css
@@ -129,11 +129,11 @@
 .page-header.navbar .hor-menu .navbar-nav > li.classic-menu-dropdown .dropdown-menu{min-width:195px;max-width:190px;}
 .page-header.navbar .hor-menu .navbar-nav > li .dropdown-submenu > .dropdown-menu{top:0;}
 .page-header.navbar .hor-menu .navbar-nav > li .dropdown-submenu > a:after{top:9px;right:10px;}
-@media (min-width:992px) and (max-width:1200px){.page-boxed .page-header.navbar{}
+@media (min-width:768px) and (max-width:1200px){.page-boxed .page-header.navbar{}
 .page-boxed .page-header.navbar .top-menu .navbar-nav > li.dropdown-user .dropdown-toggle .username.username-hide-on-mobile{display:none;}
 .page-boxed .page-header.navbar .top-menu .navbar-nav > li.dropdown-language .dropdown-toggle .langname{display:none;}
 }
-@media (min-width:992px){.page-header.navbar{}
+@media (min-width:768px){.page-header.navbar{}
 .page-sidebar-closed.page-sidebar-closed-hide-logo .page-header.navbar .page-logo{padding:0;}
 .page-sidebar-closed.page-sidebar-closed-hide-logo .page-header.navbar .page-logo{width:45px;}
 .page-sidebar-closed.page-sidebar-closed-hide-logo .page-header.navbar .page-logo .logo-default{display:none;}
@@ -145,7 +145,7 @@
 .page-boxed.page-sidebar-fixed .page-header.navbar{}
 .page-boxed.page-sidebar-fixed .page-header.navbar .page-logo{width:190px;}
 }
-@media (max-width:991px){.page-header.navbar{padding:0 20px 0 20px;position:relative;clear:both;}
+@media (max-width:768px){.page-header.navbar{padding:0 20px 0 20px;position:relative;clear:both;}
 .page-header.navbar .page-logo{width:auto;padding:0;margin-right:10px;margin-left:0px !important;padding-left:0px !important;}
 .page-header.navbar .page-logo img{margin-left:4px !important;}
 .page-header.navbar .menu-toggler.sidebar-toggler{display:none !important;}
@@ -157,9 +157,9 @@
 .page-header-fixed.page-header-fixed-mobile .navbar-fixed-top{position:fixed;}
 .page-boxed .page-header.navbar > .container{max-width:none !important;margin:0 !important;padding:0 !important;}
 }
-@media (min-width:768px) and (max-width:991px){.page-boxed .page-header.navbar{margin:auto !important;padding:0;}
+/*@media (min-width:768px) and (max-width:991px){.page-boxed .page-header.navbar{margin:auto !important;padding:0;}
 .page-boxed .page-header.navbar > .container{margin:auto !important;}
-}
+}*/
 @media (max-width:767px){.page-header.navbar{padding:0 10px 0 10px;}
 .page-header.navbar .page-logo{width:auto;}
 .page-header.navbar .search-form.open{z-index:3;left:10px;right:10px;position:absolute;width:auto !important;}
@@ -194,9 +194,9 @@
 .page-container:after{clear:both;}
 .page-header-fixed .page-container{margin-top:40px;}
 .page-footer-fixed.page-footer-fixed-mobile .page-container{margin-bottom:20px !important;}
-@media (min-width:992px){.page-footer-fixed .page-container{margin-bottom:20px !important;}
+@media (min-width:480px){.page-footer-fixed .page-container{margin-bottom:20px !important;}
 }
-@media (max-width:991px){.page-container{margin:0 !important;padding:0 !important;}
+@media (max-width:480px){.page-container{margin:0 !important;padding:0 !important;}
 .page-header-fixed.page-header-fixed-mobile .page-container{margin-top:40px !important;}
 }
 @media (max-width:480px){.page-header-fixed.page-header-fixed-mobile .page-container{margin-top:92px !important;}
@@ -315,7 +315,7 @@
 .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .sidebar-search.sidebar-search-bordered .input-group .form-control{font-size:13px;padding:6px 8px;}
 .page-sidebar .sidebar-search.sidebar-search-bordered .input-group .input-group-btn .btn,
 .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .sidebar-search.sidebar-search-bordered .input-group .input-group-btn .btn{margin-right:6px;}
-@media (min-width:992px){.page-sidebar{width:190px;float:left;position:relative;margin-right:-100%;}
+@media (min-width:768px){.page-sidebar{width:190px;float:left;position:relative;margin-right:-100%;}
 .page-full-width .page-sidebar{display:none !important;}
 .page-sidebar.navbar-collapse{max-height:none !important;}
 .page-sidebar-reversed .page-sidebar{float:right;margin-right:0;margin-left:-100%;}
@@ -400,7 +400,7 @@
 .page-sidebar-menu.page-sidebar-menu-light.page-sidebar-menu-hover-submenu li:hover > .sub-menu{margin-top:-41px;}
 .page-sidebar-menu.page-sidebar-menu-light.page-sidebar-menu-hover-submenu li:hover > .sub-menu > li > .sub-menu{margin-top:-41px;}
 }
-@media (max-width:991px){.page-sidebar{border-top:0 !important;margin:20px;}
+@media (max-width:768px){.page-sidebar{border-top:0 !important;margin:20px;}
 .page-sidebar .sidebar-toggler{display:none;}
 .page-sidebar .selected{display:none !important;}
 .page-sidebar.navbar-collapse{max-height:none;}
@@ -410,7 +410,7 @@
 .page-sidebar .mega-menu-responsive-content{padding:10px 18px 10px 45px;}
 .page-full-width .page-sidebar-menu{display:block;}
 }
-@media (min-width:768px) and (max-width:991px){.page-sidebar .btn-navbar.collapsed .arrow{display:none;}
+/*@media (min-width:768px) and (max-width:991px){.page-sidebar .btn-navbar.collapsed .arrow{display:none;}*/
 .page-sidebar .btn-navbar .arrow{position:absolute;right:25px;width:0;height:0;top:50px;border-bottom:15px solid #5f646b;border-left:15px solid transparent;border-right:15px solid transparent;}
 }
 @media (max-width:480px){.page-sidebar,
@@ -442,7 +442,7 @@
 .page-quick-sidebar-open.page-quick-sidebar-push-content.page-quick-sidebar-full-height .page-header{transition:margin-left 0.3s;margin-left:-270px;}
 .page-quick-sidebar-open.page-quick-sidebar-push-content.page-footer-fixed:not(.page-quick-sidebar-full-height) .page-footer{margin-left:0;margin-right:0;}
 .page-quick-sidebar-open.page-quick-sidebar-over-content-transparent .page-quick-sidebar-wrapper{opacity:0.9;filter:alpha(opacity=90);}
-@media (max-width:991px){.page-quick-sidebar-open.page-quick-sidebar-push-content .page-sidebar-wrapper{display:none;}
+@media (max-width:768px){.page-quick-sidebar-open.page-quick-sidebar-push-content .page-sidebar-wrapper{display:none;}
 }
 .page-quick-sidebar-wrapper{overflow:hidden;}
 .page-quick-sidebar-wrapper .page-quick-sidebar{}
@@ -537,7 +537,7 @@
 .page-container-bg-solid .page-content{background:#F1F3FA;}
 .page-container-bg-solid.page-md .page-content .page-bar{border-radius:0 !important;}
 .page-full-width .page-content{margin-left:0px !important;}
-@media (min-width:992px){.page-content-wrapper{float:left;width:100%;}
+@media (min-width:768px){.page-content-wrapper{float:left;width:100%;}
 .page-content-wrapper .page-content{margin-left:190px;margin-top:0px;min-height:850px;padding:15px 10px 10px 10px;}
 .page-content-wrapper .page-content.no-min-height{min-height:auto;}
 .page-sidebar-fixed.page-sidebar-hover-on .page-content-wrapper .page-content{margin-left:45px;}
@@ -549,11 +549,11 @@
 .page-sidebar-closed.page-sidebar-reversed.page-sidebar-hide .page-content-wrapper .page-content{margin-right:0 !important;}
 .page-full-width .page-content-wrapper .page-content{margin-left:0px !important;}
 }
-@media (max-width:991px){.page-container-bg-solid .page-bar{margin-top:-20px;}
+@media (max-width:768px){.page-container-bg-solid .page-bar{margin-top:-20px;}
 .page-boxed > .container{max-width:none !important;margin:0 !important;padding:0 !important;}
 .page-content-wrapper .page-content{margin:0px !important;padding:20px 20px 20px 20px !important;min-height:280px;}
 }
-@media (min-width:768px) and (max-width:991px){.page-boxed > .container{margin:auto !important;}
+@media (min-width:768px) and (max-width:768px){.page-boxed > .container{margin:auto !important;}
 }
 @media (max-width:767px){.page-content-wrapper .page-content{padding:20px 10px 10px 10px !important;overflow:hidden;}
 .page-content-wrapper .page-content .page-title{margin-bottom:20px;font-size:18px;}
@@ -567,7 +567,7 @@
 .page-footer .page-footer-inner{float:left;display:inline-block;}
 .page-footer-fixed.page-footer-fixed-mobile .page-footer{position:fixed;left:0;right:0;z-index:10000;bottom:0;}
 .page-footer-fixed.page-footer-fixed-mobile.page-sidebar-fixed .page-footer{margin-left:0 !important;}
-@media (min-width:992px){.page-footer{clear:left;}
+@media (min-width:768px){.page-footer{clear:left;}
 .page-footer-fixed .page-footer{position:fixed;left:0;right:0;z-index:10000;bottom:0;}
 .page-sidebar-fixed.page-sidebar-closed .page-footer{margin-left:45px;}
 .page-sidebar-fixed.page-footer-fixed .page-footer{margin-left:0 !important;}
@@ -578,7 +578,7 @@
 .page-sidebar-reversed.page-sidebar-fixed.page-footer-fixed .page-footer{margin-left:0;margin-right:0;}
 .page-sidebar-reversed.page-sidebar-fixed.page-sidebar-closed .page-footer{margin-right:45px;}
 }
-@media (max-width:991px){.page-boxed .page-footer{padding-left:0px;padding-right:0px;}
+@media (max-width:768px){.page-boxed .page-footer{padding-left:0px;padding-right:0px;}
 }
 @media (max-width:767px){.page-footer,
 .page-boxed .page-footer{padding-left:10px;padding-right:10px;}
@@ -588,9 +588,9 @@
 .scroll-to-top > i{display:inline-block;color:#687991;font-size:30px;opacity:0.6;filter:alpha(opacity=60);}
 .scroll-to-top:hover{cursor:pointer;}
 .scroll-to-top:hover > i{opacity:1;filter:alpha(opacity=100);}
-@media (min-width:992px){.scroll-to-top{right:20px;}
+@media (min-width:768px){.scroll-to-top{right:20px;}
 }
-@media (max-width:991px){.scroll-to-top{bottom:10px;right:10px;}
+@media (max-width:768px){.scroll-to-top{bottom:10px;right:10px;}
 .scroll-to-top > i{font-size:28px;}
 }
 .theme-panel{width:420px;margin-top:-13px;margin-right:0px;z-index:100;float:right;position:relative;}
