--- a/templates/general/tareas/tareas_listado.html
+++ b/templates/general/tareas/tareas_listado.html
@@ -115,7 +115,8 @@ var tabla = $('#dataTables-empresas').DataTable({
               footer: false
               },
             responsive: false,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
