--- a/templates/productos/lista_productos.html
+++ b/templates/productos/lista_productos.html
@@ -156,7 +156,8 @@
                 footer: false
             },
             responsive: true,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend: 'colvis',
