--- a/templates/reportes/contables/caja_diaria.html
+++ b/templates/reportes/contables/caja_diaria.html
@@ -159,7 +159,8 @@ $.fn.datepicker.dates['es'] = {
              "colReorder": true,
              "searching": true,
               responsive: true,
-              dom: 'Bfrtlip',
+             //dom: 'Bfrtlip',
+              dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
               buttons: [
                   {
                       extend:    'colvis',
