--- a/templates/reportes/contables/libro_iva_compras.html
+++ b/templates/reportes/contables/libro_iva_compras.html
@@ -239,7 +239,8 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
               footer: false
               },
             responsive: false,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
@@ -449,7 +450,8 @@ var tabla = $('#dataTables-cpb_venta_alic').DataTable({
               footer: false
               },
             responsive: false,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
