--- a/templates/reportes/contables/retenc_imp.html
+++ b/templates/reportes/contables/retenc_imp.html
@@ -259,7 +259,8 @@ var tabla = $('#dataTables-percep').DataTable({
               footer: false
               },
             responsive: false,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
@@ -433,7 +434,8 @@ var tabla = $('#dataTables-retenc').DataTable({
               footer: false
               },
             responsive: false,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
@@ -608,7 +610,8 @@ var tabla = $('#dataTables-impuestos').DataTable({
               footer: false
               },
             responsive: false,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
