--- a/templates/reportes/contables/seguimiento_cheques.html
+++ b/templates/reportes/contables/seguimiento_cheques.html
@@ -316,7 +316,8 @@ var tabla2 = $('#dataTables-cartera').DataTable({
               footer: false
               },
             responsive: true,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
@@ -471,7 +472,8 @@ var tabla3 = $('#dataTables-cobrados').DataTable({
               footer: false
               },
             responsive: true,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
@@ -624,7 +626,8 @@ var tabla4 = $('#dataTables-pagados').DataTable({
               footer: false
               },
             responsive: true,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
@@ -777,7 +780,8 @@ var tabla = $('#dataTables-cheques').DataTable({
               footer: false
               },
             responsive: true,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
