--- a/templates/general/movimientos/movimientos_listado.html
+++ b/templates/general/movimientos/movimientos_listado.html
@@ -189,7 +189,8 @@ var tabla = $('#dataTables-cpb_movimientos').DataTable({
               footer: false
               },
             responsive: true,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
