--- a/templates/productos/producto_precios.html
+++ b/templates/productos/producto_precios.html
@@ -181,7 +181,8 @@ var tabla = $('#dataTables-lprecios').DataTable({
               footer: false
               },
             responsive: true,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
