--- a/templates/reportes/varios/comisiones_vendedores.html
+++ b/templates/reportes/varios/comisiones_vendedores.html
@@ -141,7 +141,8 @@ var tabla = $('#dataTables-comisiones').DataTable({
               footer: false
               },
             responsive: true,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
