--- a/templates/reportes/varios/historico_productos.html
+++ b/templates/reportes/varios/historico_productos.html
@@ -145,7 +145,8 @@ var tabla = $('#dataTables-historico').DataTable({
               footer: false
               },
             responsive: true,
-            dom: 'Bfrtlip',
+            //dom: 'Bfrtlip',
+            dom: "Bf<'row'<'col-sm-12'tr>>"+"<'row'<'col-sm-3'l><'col-sm-9'ip>>",
             buttons: [
                 {
                     extend:    'colvis',
